--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: java
 jdk: oraclejdk11
 before_install:
-- sude apt-get install -y ant
+- sudo apt-get install -y ant
 - sudo apt-get install -y ant-optional
